# Observatory

./: .gitignore  .gitmodules  change_nebulae.sh  change_tz.sh  install.sh  stellarium-config.ini  stellarium.patch  toggleTV.sh
control-plugin/: .clang-format  CMakeLists.txt  state_machine.puml
control-plugin/src/: ControlPlugin.cpp  ControlPlugin.hpp  ControlThread.cpp  ControlThread.hpp  DateTimeGui.cpp  EncoderStateMachine.hpp  InputThread.cpp  InputThread.hpp  QtSMLLogger.hpp  StateMachine.cpp  StateMachine.hpp  constants.hpp  control-plugin.qrc
control-plugin/src/gui/: ControlPluginSettingsWindow.cpp  ControlPluginSettingsWindow.hpp  DateTimeGui.cpp  DateTimeGui.hpp  controlPluginSettingsWindow.ui
mask_plugin/: CMakeLists.txt  compile_commands.json
mask_plugin/.clangd/index/: MaskPlugin.cpp.86BCAC42C9C7C074.idx  MaskPlugin.hpp.2216E246890602ED.idx
mask_plugin/src/: MaskPlugin.cpp  MaskPlugin.hpp  mask-plugin.qrc
startup-files/: install.sh  stellarium.service  stellarium.sh  stellarium.xinit
stellarium_plymouth_theme/: stellarium.plymouth  stellarium.script
unclutter-xfixes/src/: unclutter.c
